Investment calculations on models

--- a/app/views/calculator/view.html.erb
+++ b/app/views/calculator/view.html.erb
@@ -1,7 +1,8 @@
 
 <%=form_tag "calculator/calculate", name: :calculator, class:"investment_calculator "+@locale.to_s+"_locale" do%>
 	<h1><%=t(:calculator_title)%></h1>
-	<div class="investment_calculator__invested_value"><label for="invested_value"><%=t(:you_have_invested)%></label>&nbsp;<%=text_field_tag :invested_value, @calculated_interests_data[:invested_value]%>&nbsp;руб.
+	<div class="investment_calculator__invested_value">
+		<label for="invested_value"><%=t(:you_have_invested)%></label>&nbsp;<%=text_field_tag :invested_value, @calculated_interests_data[:invested_value]%>&nbsp;<%=@calculated_interests_data[:currency]%>
 	</div>
 	
 	<div class="calculation_result">
@@ -14,7 +15,7 @@
 		</div>
 		<div class="calculation_result__real_interest_section">
 			<%=t(:but_now_things_going)%> <span class="calculation_result__real_interest_shift"><%=@calculated_interests_data[:shift]%></span>
-			<%=t(:and)%> <%=t(:you_will_get)%> <span class="calculation_result__real_interest_value">
+			<%=t(:and_probably)%> <%=t(:you_will_get)%> <span class="calculation_result__real_interest_value">
 			<%=@calculated_interests_data[:real_interest]%>&nbsp;<%=@calculated_interests_data[:currency]%>
 			</span> 
 			<%=t(:by_real_intrest_rate)%> <span class="calculation_result__real_interest_rate"><%=@calculated_interests_data[:real_interest_rate]%></span>
