--- a/app/assets/stylesheets/calculator.css.scss
+++ b/app/assets/stylesheets/calculator.css.scss
@@ -6,10 +6,11 @@
 
 	margin: 3em auto 3em auto;
 	padding: 0em 1em 1em;
-	width: 500px;
-	border: 1px solid black;
-	font-size: 27px;
-	line-height: 1.5em;
+	width: 700px;
+	border: 1px solid rgba(0,0,0,0.2);
+    font-size: 27px;
+    line-height: 1.5em;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.2);
 
 	h1 {
 	    line-height: 1em;
